[metadata]
name = findssh
version = 1.0.7
author = Michael Hirsch, Ph.D.
url = https://github.com/scivision/findssh
description = find open servers on your IPv4 subnet, e.g. SSH
keywords = 
  port-scan
  ssh
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Intended Audience :: Information Technology
  Intended Audience :: System Administrators
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Topic :: System :: Networking
  Topic :: Utilities
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
setup_requires = 
  setuptools >= 38.6
  pip >= 10
  twine >= 1.11
include_package_data = True
packages = find:
install_requires =

[options.extras_require]
tests = 
  pytest
  pytest-cov
  coveralls
  flake8
  mypy

[options.entry_points]
console_scripts =
  findssh = findssh:main


[flake8]
max-line-length = 132
exclude = .git,__pycache__,doc/,docs/,build/,dist/,archive/

[coverage:run]
cover_pylib = false
omit =
  /home/travis/virtualenv/*
  */site-packages/*
  */bin/*

[coverage:report]
exclude_lines =
  pragma: no cover
  def __repr__
  RuntimeError
  NotImplementedError
  ImportError
  KeyError
  FileNotFoundError
  CalledProcessError
  logging.warning
  ValueError
  TypeError
