[metadata]
name = findssh
version = 1.2.0.1
author = Michael Hirsch, Ph.D.
author_email = scivision@users.noreply.github.com
url = https://github.com/scivision/findssh
description = find open servers on your IPv4 subnet, e.g. SSH
keywords =
  port-scan
  ssh
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Framework :: AsyncIO
  Intended Audience :: Developers
  Intended Audience :: Education
  Intended Audience :: End Users/Desktop
  Intended Audience :: Information Technology
  Intended Audience :: System Administrators
  Intended Audience :: Telecommunications Industry
  Operating System :: OS Independent
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: Implementation :: CPython
  Programming Language :: Python :: Implementation :: PyPy
  Topic :: Security
  Topic :: System :: Networking
  Topic :: Utilities
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.5
setup_requires =
  setuptools >= 38.6
  pip >= 10
  twine >= 1.11
include_package_data = True
packages = find:
install_requires =

[options.extras_require]
tests =
  pytest
cov =
  pytest-cov
  coveralls
  flake8
  mypy

[options.entry_points]
console_scripts =
  findssh = FindSSH:main
